# rew

./: .gitignore  .hatcherfiles  .hatcherrc  .travis.yml  404.html  CHANGELOG.md  Cargo.toml  Justfile  LICENSE.md  Makefile  README.md  TODO.txt  book.toml  build.rs  ccov.sh  check.sh  custom.css  docs.sh  extra.css  grcov.sh  index.html  mkdocs.yml  print.html  searchindex.js  searchindex.json  sitemap.xml
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  docs.yml  pages.yml  release.yml
CHANGELOG/: index.html
LICENSE/: index.html
benches/: bench.sh  command.sh  run.sh  setup.sh  summary.sh  test.sh
benches/commands/: ascii.sh  cat.sh  first.sh  join.sh  last.sh  loop.sh  lower.sh  seq.sh  skip.sh  split.sh  stream.sh  trim.sh  upper.sh  x.sh
benchmarks/: rew-ascii.html  rew-cat.html  rew-first.html  rew-join.html  rew-last.html  rew-loop.html  rew-lower.html  rew-seq.html  rew-skip.html  rew-split.html  rew-stream.html  rew-trim.html  rew-upper.html  rew-x.html  setup.html
compare/: index.html
docs/: README.md  SUMMARY.md  about.md  compare.md  comparison.md  custom.css  docpress.json  examples.md  extra.css  index.md  input.md  install.md  output.md  pattern.md  usage.md
docs/benchmarks/: rew-ascii.md  rew-cat.md  rew-first.md  rew-join.md  rew-last.md  rew-x.md  (+9 more)
examples/: index.html
fuzz/: Cargo.toml
guide/: faq.html  installation.html
input/: index.html
install/: index.html
output/: index.html
pattern/: index.html
reference/: rew-ascii.html  rew-cat.html  rew-first.html  rew-help.html  rew-join.html  rew-last.html  rew-loop.html  rew-lower.html  rew-seq.html  rew-skip.html  rew-split.html  rew-stream.html  rew-trim.html  rew-upper.html  rew-x.html  rew.html
scripts/: cpb.sh  mvb.sh  rew.sh  tag.sh
search/: search_index.json
src/: action.rs  app.rs  args.rs  cli.rs  color.rs  colors.rs  command.rs  counter.rs  error.rs  examples.rs  fs.rs  input.rs  io.rs  lib.rs  main.rs  output.rs  output_test.rs  pager.rs  pattern.rs  range.rs  regex.rs  run.rs  shell.rs  state.rs  stdbuf.rs  utils.rs
tests/: ascii.rs  bcp.rs  bmv.rs  cat.rs  cpb.rs  examples.rs  first.rs  join.rs  last.rs  loop.rs  lower.rs  mvb.rs  rew.rs  rew_cpb.rs  rew_mvb.rs  seq.rs  skip.rs  split.rs  stream.rs  trim.rs  upper.rs  utils.rs
usage/: index.html
xtask/: Cargo.toml
(+140 files in other folders)
