[workspace]
members = [".", "fuzz", "xtask"]

[workspace.dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.16" }

[package]
name = "rew"
version = "0.4.0"
description = "The Swiss Army Knife of line-oriented text processing. Transform text by composing parallel shell pipelines!"
categories = ["command-line-utilities", "text-processing", "filesystem"]
keywords = ["cli", "utility", "text", "rename", "path"]
authors = ["Jan Pikl <pikl.jan@gmail.com>"]
repository = "https://github.com/jpikl/rew"
documentation = "https://jpikl.github.io/rew"
homepage = "https://jpikl.github.io/rew"
license = "MIT"
edition = "2021"

[dependencies]
anstream = "0.6.7"
anyhow = { workspace = true }
bstr = "1.9.0"
clap = { workspace = true, features = [
    "cargo",
    "derive",
    "env",
    "string",
    "wrap_help",
] }
derive_more = { version = "1.0.0-beta.6", features = [
    "display",
    "error",
    "is_variant",
] }
deunicode = "1.4.2"
itoap = "1.0.1"
memchr = "2.7.1"
which = "6.0.0"

[dev-dependencies]
assert_cmd = "2.0.13"
claims = "0.7.1"
rstest = "0.18.2"

[profile.release]
codegen-units = 1
panic = "abort"
strip = true
lto = true
